fix overflow css issue in navbar

--- a/apps/operator-portal/styles/build.css
+++ b/apps/operator-portal/styles/build.css
@@ -600,14 +600,6 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
-.-mx-2\.5 {
-  margin-left: -0.625rem;
-  margin-right: -0.625rem;
-}
-.-mx-2 {
-  margin-left: -0.5rem;
-  margin-right: -0.5rem;
-}
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -692,9 +684,6 @@ video {
 .h-7 {
   height: 1.75rem;
 }
-.h-12 {
-  height: 3rem;
-}
 .h-4 {
   height: 1rem;
 }
@@ -740,20 +729,14 @@ video {
 .w-\[calc\(100vw-208px\)\] {
   width: calc(100vw - 208px);
 }
-.w-7 {
-  width: 1.75rem;
-}
-.w-4\/12 {
-  width: 33.333333%;
-}
-.w-12 {
-  width: 3rem;
-}
 .w-9\/12 {
   width: 75%;
 }
 .w-3\/12 {
   width: 25%;
+}
+.w-7 {
+  width: 1.75rem;
 }
 .w-4 {
   width: 1rem;
@@ -778,12 +761,6 @@ video {
 }
 .flex-1 {
   flex: 1 1 0%;
-}
-.flex-shrink-0 {
-  flex-shrink: 0;
-}
-.shrink-0 {
-  flex-shrink: 0;
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -821,17 +798,8 @@ video {
 .gap-28 {
   gap: 7rem;
 }
-.gap-2\.5 {
-  gap: 0.625rem;
-}
-.gap-2 {
-  gap: 0.5rem;
-}
 .gap-10 {
   gap: 2.5rem;
-}
-.gap-y-5 {
-  row-gap: 1.25rem;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -863,9 +831,6 @@ video {
 .border-l-4 {
   border-left-width: 4px;
 }
-.border-r {
-  border-right-width: 1px;
-}
 .border-dashed {
   border-style: dashed;
 }
@@ -879,10 +844,6 @@ video {
 }
 .border-transparent {
   border-color: transparent;
-}
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 .bg-\[\#f8f8f8\] {
   --tw-bg-opacity: 1;
@@ -904,10 +865,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(242 242 242 / var(--tw-bg-opacity));
 }
-.bg-ct-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 91 67 / var(--tw-bg-opacity));
-}
 .bg-ct-purple-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(182 103 241 / var(--tw-bg-opacity));
@@ -918,11 +875,11 @@ video {
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
 }
-.bg-opacity-20 {
-  --tw-bg-opacity: 0.2;
-}
 .bg-opacity-30 {
   --tw-bg-opacity: 0.3;
+}
+.bg-opacity-20 {
+  --tw-bg-opacity: 0.2;
 }
 .fill-current {
   fill: currentColor;
@@ -939,9 +896,6 @@ video {
 }
 .p-10 {
   padding: 2.5rem;
-}
-.p-3 {
-  padding: 0.75rem;
 }
 .p-5 {
   padding: 1.25rem;
@@ -978,14 +932,6 @@ video {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
 }
-.px-2\.5 {
-  padding-left: 0.625rem;
-  padding-right: 0.625rem;
-}
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
 .pt-20 {
   padding-top: 5rem;
 }
@@ -1000,18 +946,6 @@ video {
 }
 .pt-2 {
   padding-top: 0.5rem;
-}
-.pb-7 {
-  padding-bottom: 1.75rem;
-}
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-.pr-3 {
-  padding-right: 0.75rem;
-}
-.pl-3 {
-  padding-left: 0.75rem;
 }
 .text-center {
   text-align: center;
@@ -1063,10 +997,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
-.text-ct-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(255 91 67 / var(--tw-text-opacity));
-}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1077,11 +1007,6 @@ video {
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-xl {
